# openreview-visualization

./: .gitignore  .pdm-python  .pre-commit-config.yaml  README.md  app.py  pyproject.toml
scripts/: download_papers.py  download_reviews.py  process_reviews.py  visualize_nomic.py  visualize_wordcloud.py
src/openreview_visualization/: utils.py
src/openreview_visualization/data/: fetcher.py  processor.py
src/openreview_visualization/visualizers/: base.py  gradio.py  nomic.py  wordcloud.py
